add db abstraction

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -11,13 +11,13 @@ RUN go install github.com/canthefason/go-watcher/cmd/watcher
 WORKDIR /server
 
 # Copy package management files
-COPY go.* ./
+COPY server/go.* ./
 
 # Download dependencies
 RUN go mod download
 
 # Copy source
-COPY . .
+COPY server .
 
 # Build
 RUN go build -v -o /go/bin/server
