--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,8 @@ services:
 
   server:
     build:
-      context: server
+      context: .
+      dockerfile: server/Dockerfile
       target: build
     depends_on: [mongo]
     ports:
@@ -12,6 +13,8 @@ services:
     volumes:
       - ./server:/server
     command: watcher
+    environment:
+      LOG_LEVEL: DEBUG
 
   mongo:
     image: mongo:latest
