--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
     ports:
       - 8000:8000
     volumes:
-      - ./server:/server
+      - ./server:/app
     command: watcher
     environment:
       LOG_LEVEL: DEBUG
