add firestore check for rooms

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ vendor
 .DS_Store
 node_modules
 env.txt
+fir-test-9a9f3-firebase-adminsdk-hbzpi-90259f5885.json
 
 ################
 # Firebase made
