--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,7 @@ services:
     environment:
       LOG_LEVEL: DEBUG
       MONGO_CONNECTION_URL: mongodb://mongo:27017
+      PPROF: 1
 
   mongo:
     image: mongo:latest
