fix WS CORS violation panic bug, add tests

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ vendor
 node_modules
 env.txt
 fir-test-9a9f3-firebase-adminsdk-hbzpi-90259f5885.json
+__pycache__
 
 ################
 # Firebase made
