--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ env.txt
 fir-test-9a9f3-firebase-adminsdk-hbzpi-90259f5885.json
 __pycache__
 gcp-private-key.json
+nime2020
 
 ################
 # Firebase made
